--- a/Myfirstcode.html
+++ b/Myfirstcode.html
@@ -54,5 +54,29 @@
         <li>Mazda</li>
         <li>Lambogini</li>
     </ol>
+    <dl>
+        <dt>HTML</dt>
+        <dd>HyperText Markup Languange</dd>
+        <dt>CSS</dt>
+        <dd>Cascading Style Sheet</dd>
+        <dt>Javascript</dt>
+        <dd>Javascript is used for functionality</dd>
+    </dl>
+    <ul style="list-style-type: circle;">
+        <li>Coffee</li>
+        <li>Milk</li>
+        <li>Tea</li>
+    </ul>
+    <ol type="A">
+        <li>First Step</li>
+        <li>Second Step</li>
+    </ol>
+    <ol start="50">
+        <li>First Step</li>
+        <li>Second Step</li>
+    </ol>
+    <a href="https://google.com" target="_blank">Click here to visit google search</a>
+    <hr>
+    <a title="google search" href="https://google.com" target="_blank">Click here to visit google search</a>
 </body>
 </html>
