This is modified

--- a/Weekly Assessment.html
+++ b/Weekly Assessment.html
@@ -6,6 +6,88 @@
     <title>Tasks</title>
 </head>
 <body>
-    
+    <h1 style="background-color: goldenrod;">Welcome to my page, I am Ayankunle Simeon</h1>
+    <!-- Task 1 -->
+    <h1>Task 1</h1>
+    <p>My intrest includes:</p>
+    <ul>
+        <li>Football</li>
+        <li>Career Development</li>
+        <li>Personal Development</li>
+    </ul>
+    <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
+    <br><br>
+    <!-- Task 2 -->
+    <h2>Task 2</h2>
+    <form action="/action_page.php" method="post">
+        <label for="username">UserName:</label>
+        <input type="text" id="username" name="name">
+        <p>Please select your gender:</p>
+        <input type="radio" id="Male" name="Male">
+        <label for="Male">Male</label>
+        <br>
+        <input type="radio" id="Female" name="Female">
+        <label for="Female">Female</label>
+        <br>
+        <input type="radio" id="Other" name="Other">
+        <label for="Other">Others</label>
+        <br><br>
+
+        <p>Programming Languanges:</p>
+        <input type="checkbox" id="Languange" name="HTML">
+        <label for="Languange">HTML</label>
+        <br>
+        <input type="checkbox" id="Languange" name="CSS">
+        <label for="Languange">CSS</label>
+        <br>
+        <input type="checkbox" id="Languange" name="Javascript">
+        <label for="Languange">Javascript</label>
+        <br><br>
+        <p><strong>Level of Experience</strong></p>
+        <label for="Experience">Experience Level: </label>
+        <select id="Experience" name="Level">
+        <br>
+            <option value="Beginner">Beginner</option>
+            <option value="Intermediate">Intermediate</option>
+            <option value="Advanced">Advanced</option>
+        </select>
+        <br><br>
+        <button type="submit">Submit</button>
+    </form>
+    <!-- Task 3 -->
+    <h2>Task 3</h2>
+    <h1>Spaghetti Carbonara Recipe</h1>
+    <p>Ingredients:</p>
+    <ul>
+        <li>Chicken</li>
+        <li>Mushroom</li>
+        <li>Carbonara</li>
+        <li>Garlic</li>
+        <li>Salad</li>
+        <li>Linguine</li>
+    </ul>
+    <p>Steps:</p>
+    <ol>
+        <li>Add Chicken and Mushroom</li>
+        <li>Turn Carbonara into cheese-topped pasta bake</li>
+        <li>Use Linguine or Tagliatelle with fresh Salad</li>
+    </ol>
+    <!-- Task 4 -->
+    <h2>Task 4</h2>
+    <h3>FAQ(frequently asked question)</h3>
+    <p><strong>1. What are some of the different options for jobs for web developers?</strong></p>
+    <p><em>Developers might specialize in front-end development, working with clients in the creation of web pages. They also might specialize in back-end development and create the systems that users don't see but that keep the site working. Web developers work on the server-side of web pages. Full-stack developers work on both ends of projects. Most smaller webpages work with full-stack developers. Web developers also work as webmasters, keeping websites up to date, monitoring traffic and solving any issues that arise with the site.</em></p>
+    <p><strong>2. How can I know if I am being paid fairly as a web developer?</strong></p>
+    <p><em>If you’re unsure about what salary is appropriate for a web developer position, visit Indeed's Salary Calculator to get a free, personalized pay range based on your location, industry and experience.</em></p>
+    <p><strong>3. What programs do web developers use most often?</strong></p>
+    <p><em>Web developers work with JavaScript, HTML, Java, jQuery, SQL, AngularjS, PHP, CSS, and User interface design.</em></p>
+    <p><strong>4. What qualities are most important in a web developer?</strong></p>
+    <p><em>Beyond having great computer skills, web developers need to have a love of learning. The field is changing quickly, and web developers have to enjoy and have a commitment to keeping up with changes in the field. Also, they need to have good communication skills so that they can understand exactly what a client is looking for in a web page. Web developers also need to have patience, problem-solving skills and perfectionism to create the best products.</em></p>
+    <p><strong>What else do you want to know?</strong></p>
+    <form action="/action_page.php" method="post">
+        <textarea  name="message" rows="5" cols="50" placeholder="What would you like to know about working as a Web Developer?"></textarea>
+        <br>
+        <button type="submit">Submit Question</button>
+    </form>
 </body>
 </html>
