--- a/Weekly Assessment.html
+++ b/Weekly Assessment.html
@@ -89,5 +89,21 @@
         <br>
         <button type="submit">Submit Question</button>
     </form>
+    <!-- Task 5 -->
+    <h2>Task 5</h2>
+    <h1>LOVE RUBY LAVENDER</h1>
+    <h4><strong>Author:</strong></h4>Deborah Wiles
+    <h4><strong>Genre:</strong></h4>Fiction
+    <h4>Summary:</h4>
+    <p>The book is about a fictional story . Ruby Lavender is a ten year old tomboy who lives in Halleluia ,Mississippi. Her best friend is her grandmother, Miss Eula Dapplevine. Over one busy summer,Ruby steals chickens ,Miss Eula goes to Hawaii,and they both have to deal with the loss of Ruby’s grandfather in a fatal car accident.Ruby’s arch enemy ,Melba Jane Latham, also causes trouble .Learn about these events through letters between Ruby and Miss Eula.</p>
+    <h4>Thoughts and Opinions:</h4>
+    <p>I truly loved reading this book .The characters are humorous ,and the letters between them are interesting .One of my favourite parts was when and how Melba Jane’s hair turns blew .The other keeps you guessing about the Ruby’s grandfather and Melba Jane’s father .At the end of the book ,I wanted to keep reading to find out what happened to the characters.</p>
+    <h4>Key Points about the Book:</h4>    
+        <ol type="i">
+            <li>Humorous characters</li>
+            <li>Stolen Chicken</li>
+            <li>Ruby’s arch enemy</li>
+            <li>A ten years old tomboy: Ruby LAVENDER</li>
+        </ol>
 </body>
 </html>
