This is edited recently

--- a/Weekly Assessment.html
+++ b/Weekly Assessment.html
@@ -6,7 +6,7 @@
     <title>Tasks</title>
 </head>
 <body>
-    <h1 style="background-color: goldenrod;">Welcome to my page, I am Ayankunle Simeon</h1>
+    <h1 style="color:rgb(0, 100, 42);">Welcome to my page, I am Ayankunle Simeon</h1>
     <!-- Task 1 -->
     <h1>Task 1</h1>
     <p>My intrest includes:</p>
@@ -23,13 +23,13 @@
         <label for="username">UserName:</label>
         <input type="text" id="username" name="name">
         <p>Please select your gender:</p>
-        <input type="radio" id="Male" name="Male">
+        <input type="radio" id="Male" name="Name" value="gender">
         <label for="Male">Male</label>
         <br>
-        <input type="radio" id="Female" name="Female">
+        <input type="radio" id="Female" name="Name" value="gender">
         <label for="Female">Female</label>
         <br>
-        <input type="radio" id="Other" name="Other">
+        <input type="radio" id="Other" name="Name" value="gender">
         <label for="Other">Others</label>
         <br><br>
 
