--- a/AnotherLevelCode.html
+++ b/AnotherLevelCode.html
@@ -53,7 +53,77 @@
             <option value="Audi">Audi</option>
             <option value="Benz">Benz</option>
             <option value="Toyota">Toyota</option>
-        </select>
+        </select><br><br>
+        <!-- Fieldset -->
+        <form action="">
+            <fieldset>
+                <legend>Profile</legend>
+                <label for="fname">First Name</label>
+                <br>
+                <input type="text" id="fname" name="fname" placeholder="John">
+                <br><br>
+                <label for="lname">Last Name</label>
+                <br>
+                <input type="text" id="lname" name="lname" placeholder="Bull">
+                <br><br>
+                <button type="submit">Submit</button>
+            </fieldset>
+        </form><br><br>
+        <!-- Datalist -->
+        <Form action="">
+            <label for="Browsers">Select the browser type: </label>
+            <input list="Browsers">
+            <datalist id="Browsers">
+                <option value ="Edge">
+                <option value ="Opera">
+                <option value ="Safari">
+                <option value ="Chrome">
+                <option value ="Firefox">
+            </datalist><br><br>
+        <!-- Pattern -->
+            <label for="country_code"> Country Code </label>
+            <input type="text" id="country_code" name="country_code" pattern="[A-za-z]{3}" title="three letters country code">
+            <br><br>
+            <label for="datemax">Start Date:</label>
+            <br>
+            <input type="date" id="datemax" name="datemax" max="1979-12-31"><br><br>
+            <label for="datemin">End Date:</label><br>
+            <input type="date" id="datemin" name="datemin" min="2000-01-02"><br><br>
+            <label for="quantity">Pick a quantity:</label>
+            <input type="number" id="quantity" name="quantity" max="1" min="5"><br><br>
+                <!-- min/max length -->
+                <label for="maxlength">Max length</label>
+                <input type="password" id="maxlength" name="password" maxlength="4" required><br><br>
+                <label for="minlength">Min length</label>
+                <input type="password" id="minlength" name="password" minlength="4" required><br><br>
+                <!-- URL -->
+                <label for="URL">Add a URL:</label>
+                <input type="url" id="homepage" name="homepage"><br>
+        </Form>
     </form>
+    <br>
+        <!-- Table -->
+    <table>
+        <caption>Products</caption>
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Quantity</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>T-Shirt</td>
+                <td>$19.99</td>
+                <td>100</td>
+            </tr>
+            <tr>
+                <td>Mug</td>
+                <td>$5.99</td>
+                <td>50</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
