--- a/Weekly Assessment.html
+++ b/Weekly Assessment.html
@@ -15,7 +15,7 @@
         <li>Career Development</li>
         <li>Personal Development</li>
     </ul>
-    <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
+    <img src="tola.jpg" alt="Girl in a jacket" width="500" height="600">
     <br><br>
     <!-- Task 2 -->
     <h2>Task 2</h2>
