--- a/Exercise_3-4-24.html
+++ b/Exercise_3-4-24.html
@@ -37,5 +37,43 @@
         <br><br>
         <button type="submit">Log In</button>
     </form>
+    <br><br>
+    <table>
+        <caption><strong>Weekly Schedule</strong></caption>
+        <thead>
+        <tr>
+            <th>Days</th>
+            <th>Time</th>
+            <th>Activity</th>
+            <th>Location</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Monday</td>
+                <td>10.00a.m</td>
+                <td>Html Syntax</td>
+                <td>GFCL Coding Academy Egbeda</td>
+            </tr>
+            <tr>
+                <td>Tuesday</td>
+                <td>10.30a.m</td>
+                <td>Form Attributes</td>
+                <td>GFCL Coding Academy Egbeda</td>
+            </tr>
+            <tr>
+                <td>Wednesday</td>
+                <td>09.00a.m</td>
+                <td>HTML Forms</td>
+                <td>GFCL Coding Academy Egbeda</td>
+            </tr>
+            <tr>
+                <td>Thursday</td>
+                <td>09.30a.m</td>
+                <td>HTML Tables</td>
+                <td>GFCL Coding Academy Egbeda</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
