--- a/Weekly Assessment 2.html
+++ b/Weekly Assessment 2.html
@@ -202,49 +202,49 @@
                <tr>
                    <td>090785</td>
                    <td>Ayankunle Daniel</td>
-                   <td>A_Dan@gmail.com</td>
+                   <td>a_dan@gmail.com</td>
                    <td>Computer Science</td>
                    <td>4.90</td>
                </tr>
                 <tr>
                    <td>090765</td>
                    <td>Ajaiyeoba Samson</td>
-                   <td>Samson_ajaiye@yahoo.com</td>
+                   <td>samson_ajaiye@yahoo.com</td>
                    <td>Accounting</td>
                    <td>3.99</td>
                </tr>
                <tr>
                    <td>090767</td>
                    <td>Atobatele Lawal</td>
-                   <td>Lawal001@yahoo.com</td>
+                   <td>lawal001@yahoo.com</td>
                    <td>Marketing</td>
                    <td>3.72</td>
                </tr>
                <tr>
                    <td>090793</td>
                    <td>Anthony Uche</td>
-                   <td>Anthony_Uche@outlook.com</td>
+                   <td>anthony_uche@outlook.com</td>
                    <td>Chemical Engineering</td>
                    <td>3.55</td>
                </tr>
                <tr>
                    <td>090834</td>
                    <td>Abdulsalam Awwal</td>
-                   <td>Awal234@yahoo.com</td>
+                   <td>awal234@yahoo.com</td>
                    <td>Chemical Engineering</td>
                    <td>3.75</td>
                </tr>
                <tr>
                    <td>090931</td>
                    <td>Hansel David</td>
-                   <td>Hansel.D@yahoo.com</td>
+                   <td>hansel.d@yahoo.com</td>
                    <td>Economics</td>
                    <td>3.62</td>
                </tr>
                <tr>
                    <td>090045</td>
                    <td>Adedeji Adeola</td>
-                   <td>Adeola123@yahoo.com</td>
+                   <td>adeola123@yahoo.com</td>
                    <td>Mechanical Engineering</td>
                    <td>4.29</td>
                </tr>                                                                                                                  
