Newly Completed Assignment

--- a/Weekly Assessment 2.html
+++ b/Weekly Assessment 2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Ass_1.css"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Tasks 2</title>
@@ -9,7 +10,7 @@
     <!-- Task 1 -->
     <h1 style="color: green;" >Ayankunle Simeon</h1>
     <h2>Task 1</h2>
-    <table>
+    <table style="width: 100%;">
         <caption><strong>Profile</strong></caption>
         <thead>
         <tr>
@@ -39,13 +40,16 @@
             <tr>
                 <td>Total</td>
                 <td>72</td>
-                <td>United Kingdom</td>
             </tr>
         </tfoot>
     </table><br>
     <!-- Task 2 -->
     <h2 style="color: blue;">Task 2</h2>
-    <table>
+    <table style="width: 100%;">
+        <colgroup>
+            <col span="2" style="background-color: aqua;">
+            <col span="3" style="background-color: rgb(154, 224, 195);">
+        </colgroup>
     <caption><strong>Books</strong></caption>
         <thead>
         <tr>
@@ -90,7 +94,7 @@
     </table><br>
     <!-- Task 3 -->
     <h2 style="color: red;">Task 3</h2>
-    <table>
+    <table style="width: 100%;">
        <caption><strong>Country</strong></caption>
            <thead>
            <tr>
@@ -135,7 +139,7 @@
     </table><br>
     <!-- Task 4 -->
     <h2 style="color: brown;">Task 4</h2>
-    <table>
+    <table style="width: 100%;">
        <caption><strong>Fruits</strong></caption>
            <thead>
            <tr>
@@ -180,7 +184,7 @@
     </table><br>
     <!-- Task 5 -->
     <h2 style="color: green;">Task 5</h2>
-    <table>
+    <table style="width: 100%;">
        <caption><strong>Student Rosters</strong></caption>
            <thead>
            <tr>
@@ -261,7 +265,11 @@
    </table><br>
    <!-- Task 6 -->
    <h2 style="color:darkorange;">Task 6</h2>
-   <table>
+   <table style="width: 100%;">
+    <colgroup>
+        <col span="2" style="background-color: rgb(36, 168, 168);">
+        <col span="3" style="background-color: rgb(154, 224, 195);">
+    </colgroup>
    <caption><strong>Movies</strong></caption>
        <thead>
        <tr>
