--- a/CSS intro.html
+++ b/CSS intro.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        a:link, a:visited {
+            background-color: #f44336;
+            color: white;
+            padding: 15px 25px;
+            text-decoration: none;
+            display: inline-block;
+        } 
+        a:hover, a:active {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
         <table>
@@ -28,5 +40,10 @@
             </tr>
         </tbody>
     </table>
+    <h2>Link Button</h2>
+    <p>A link styled as a button:</p>
+    <a title="Click" href="default.asp" target="_blank">This is a link</a>
+    <br><br>
+    <a href="mailto:someone@example.com">Send Email</a>
 </body>
 </html>
