--- a/Wk6_Asst.html
+++ b/Wk6_Asst.html
@@ -37,21 +37,16 @@
     </nav>
     </div>
     <div style="padding-bottom: 2000px;">
-        <p>1.	Create a table with three columns: “Name”, “Age”, and “Country”.
-            2.	Populate the table with at least three rows of data
-            3.	Add a header row using <thead> to label the columns
-            4.	Use <tbody> to group the data rows</p>
-        <p>Create a table to display information about your favourite books
-            2.	Include the following cplumns “title”, “author”. “Genre” and publication year.
-            3.	Populate the table with data for atleast five of your favourite books
-            4.	Use <thead> to add a header row to label the columns.
-            5.	Utilize <tbody> to group the data rows
-            6.	Optionally, add a footer row using <tfoot> with a summary or any additional information you would like to include.</p>
-        <p>Create a table to display information about different countries
-            2.	Include columns for “country name”, “capital city”, “population” and “official language(s)”.
-            3.	Populate the table with data for at least five different countries.
-            4.	Use <thead> to add a header row to label the columns.
-            5.	use <tbody> to group the data rows</p>
+        <p>1. Create an HTML file with a div element.
+            Apply CSS to the div to set its width, height, padding, border, and margin properties.
+            Experiment with different values for each property to understand their effects on the box model.</p>
+        <p>2. Create a navigation bar that sticks to the top of the viewport as the user scrolls down the page.
+            Use CSS positioning or JavaScript to achieve the sticky behavior.
+            Adjust the z-index property to ensure that the navigation bar remains visible above other page content.</p>
+        <p>3. Create a navigation bar with interactive effects triggered by user actions.
+            Apply CSS box model properties to style the navigation items, including padding, margins, and borders.
+            Implement hover effects using CSS transitions or animations to change the appearance of navigation items when hovered over.
+            Experiment with effects like color changes, underline animations, or scaling to provide visual feedback to users interacting with the navigation bar</p>
     </div>
 </body>
 </html>
