--- a/Wk_9_Task_Service.html
+++ b/Wk_9_Task_Service.html
@@ -16,12 +16,13 @@
         background-color:white; gap: 40px 40px; margin-top: 20px; margin-bottom: 20px; }
       .grid-container > div{color:black; border: 2px solid grey; border-style: groove; 
         padding:10px; background-color: rgba(189, 181, 181, 0.5);}
-      .flex-container{
-            display: flex; background-color: white;}
-    .flex-container >div{
-            background-color: white; padding: 0px 35px 0px 35px; margin-left: -30px;}
-    button{color:black; background-color: white; border: 2px solid black; 
+      button{color:black; background-color: white; border: 2px solid black; 
          font-size: 15px; text-align: center; border-radius: 5px; padding: 6px;}
+      #container{display: grid; grid-template-columns: auto auto; 
+        background-color:white; gap: 40px 40px; margin-top: 20px; margin-bottom: 20px; }
+      #container > div{color:black}
+      .footer-right-image{width: 508px; height: 280px;}
+      .item-7{position: relative;top: -18px; width: 508px; }
     </style>
 </head>
 <body>
@@ -100,13 +101,14 @@
             </div>
         </div>
         <hr>
-        <div class="flex-container">
+        <div id="container">
             <div class="item-7">
                 <h4 style="font-family: bangers;">Some facts about our services:</h4>
                 <p class="footerp">Nulla suscipit interdum diam at maximus. Proin vitae tellus retrum, accumsan nunc sit amet, iaculis tortor.
                     Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. 
                     Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-                    <ul style="list-style-type: square;">
+                    <ul style="list-style-type: square; padding: 2px 16px;
+                    line-height: 2;">
                         <li>Awesome Thing</li>
                         <li>Amazing Thing</li>
                         <li>Cool Thing</li>
